--- a/src/css/journal.css
+++ b/src/css/journal.css
@@ -10,10 +10,200 @@
 
 .journal-page .container {
   margin-top: 140px;
-  margin-bottom: 140px;
+  margin-bottom: 10px;
   width: 100%;
   height: auto;
   display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.journal-page .container .search-box {
+  width: 100%;
+  height: 71px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
+.journal-page .container .search-box .search {
+  margin-bottom: 90px;
+  width: 100%;
+  height: 71px;
+  padding-left: 21px;
+
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: flex-start;
+
+  font-family: "Nunito";
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 30px;
+  letter-spacing: 0px;
+  text-align: left;
+  color: rgb(115, 115, 115);
+  outline: none;
+  border: 1px solid #f6f6f6;
+}
+
+.journal-page .container .journal-boxes {
+  width: 100%;
+  height: auto;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  flex-wrap: wrap;
+  gap: 26px;
+}
+
+.journal-page .container .journal-boxes .journal-box {
+  width: 400px;
+  height: 674px;
+
+  border-top-left-radius: 12px;
+  border-top-right-radius: 12px;
+}
+
+.journal-page .container .journal-boxes .journal-box .card-img {
+  position: relative;
+  width: 400px;
+  height: 532px;
+
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+
+  box-sizing: border-box;
+  border: 1px solid rgb(240, 240, 240);
+  border-radius: 12px;
+}
+
+.journal-page .container .journal-boxes .journal-box .card-text {
+  margin-top: 26px;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: space-between;
+}
+
+.journal-page .container .journal-boxes .card-text .journal-category {
+  font-family: "Nunito";
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 19px;
+  letter-spacing: 0px;
+  text-align: left;
+  color: rgb(115, 115, 115);
+}
+
+.journal-page .container .journal-boxes .card-text .journal-title {
+  font-family: "Nunito";
+  font-size: 25px;
+  font-weight: 700;
+  line-height: 36px;
+  letter-spacing: 0px;
+  text-align: left;
+  color: rgb(19, 39, 98);
+}
+
+.journal-page .container .journal-boxes .card-text .journal-text {
+  font-family: "Nunito";
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 30px;
+  letter-spacing: 0px;
+  text-align: left;
+  color: rgb(115, 115, 115);
+}
+
+/* not avaible */
+
+.journal-page .container .journal-boxes .not-vaible {
+  width: 100%;
+  height: 390px;
+
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+
+  font-family: "Nunito" Black;
+  font-size: 39px;
+  font-weight: 900;
+  line-height: 52px;
+  letter-spacing: 0px;
+  text-align: left;
+  color: rgb(19, 39, 98);
+  background-color: rgb(255, 255, 255);
+}
+
+.journal-page .container .pagination-box {
+  margin-top: 140px;
+  width: 100%;
+  height: 30px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+}
+
+.journal-page .container .pagination-box .best-pagination {
+  margin-bottom: 140px;
+  width: 100%;
+  height: 30px;
+
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.journal-page .container .pagination-box .best-pagination .pagination {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  gap: 15px;
+}
+
+.journal-page .container .pagination-box .pagination .page {
+  width: 36px;
+  height: 36px;
+
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+
+  font-family: "Nunito";
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 19px;
+  letter-spacing: 0px;
+  text-align: left;
+  color: rgb(115, 115, 115);
+
+  box-sizing: border-box;
+  border: 1px solid rgb(240, 240, 240);
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+.journal-page .container .pagination-box .page:active {
+  color: rgb(255, 255, 255);
+  background-color: rgb(255, 216, 129);
+}
+
+.journal-page .container .pagination-box .best-pagination .pag-text {
+  font-family: "Nunito";
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 30px;
+  letter-spacing: 0px;
+  text-align: right;
+  color: rgb(115, 115, 115);
 }
 
 /* chosenJournal */
