--- a/src/css/journal.css
+++ b/src/css/journal.css
@@ -224,4 +224,176 @@
   width: 100%;
   height: auto;
   display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.journal-chosen-page .container .menu-box {
+  width: 100%;
+  height: auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.journal-chosen-page .container .menu-box img {
+  width: 100%;
+  height: 700px;
+  object-fit: cover;
+  border-radius: 12px;
+}
+
+.journal-chosen-page .container .menu-box span {
+  width: 100%;
+  height: auto;
+  margin-top: 43px;
+  font-family: "Nunito Black";
+  font-size: 39px;
+  font-weight: 900;
+  line-height: 52px;
+  letter-spacing: 0px;
+  text-align: left;
+  color: rgb(19, 39, 98);
+}
+
+.journal-chosen-page .container .menu-box p {
+  width: 100%;
+  height: auto;
+  margin-top: 33px;
+  font-family: "Nunito";
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 30px;
+  letter-spacing: 0px;
+  text-align: left;
+  color: rgb(115, 115, 115);
+}
+
+.journal-chosen-page .container .comment-box {
+  margin-top: 134px;
+  width: 100%;
+  height: 450px;
+
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+
+.journal-chosen-page .container .comment-box .rewiev-box {
+  width: 100%;
+  height: 450px;
+
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.journal-chosen-page .container .comment-box .rewiev-box .title {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  align-items: center;
+
+  font-family: "Nunito ExtraBold";
+  font-size: 20px;
+  font-weight: 800;
+  line-height: 29px;
+  letter-spacing: 0px;
+  text-align: center;
+  color: rgb(19, 39, 98);
+}
+
+.journal-chosen-page .container .comment-box .rewiev-box .boxes {
+  width: 100%;
+  height: 200px;
+
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  border: 1px solid #f6f6f6;
+  overflow: scroll;
+}
+
+.journal-chosen-page .container .comment-box .rewiev-box .boxes .comm {
+  padding: 0 10px 10px 10px;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  box-sizing: border-box;
+}
+
+.journal-chosen-page .container .comment-box .rewiev-box .boxes .comm span {
+  font-family: "Nunito";
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 30px;
+  letter-spacing: 0px;
+  text-align: left;
+  color: rgb(19, 39, 98);
+}
+
+.journal-chosen-page .container .comment-box .rewiev-box .boxes .comm p {
+  font-family: "Nunito";
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 30px;
+  letter-spacing: 0px;
+  text-align: left;
+  color: rgb(115, 115, 115);
+}
+.journal-chosen-page .container .comment-box .rewiev-box .review {
+  width: 100%;
+  height: 150px;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: space-between;
+}
+
+.journal-chosen-page .container .comment-box .rewiev-box .review span {
+  font-family: "Nunito";
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 30px;
+  letter-spacing: 0px;
+  text-align: left;
+  color: rgb(19, 39, 98);
+}
+
+.journal-chosen-page .container .comment-box .rewiev-box .review input {
+  width: 100%;
+  height: 40px;
+  font-family: "Nunito";
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 30px;
+  letter-spacing: 0px;
+  text-align: left;
+  color: rgb(115, 115, 115);
+  border: 1px solid #f6f6f6;
+  outline: none;
+}
+
+.journal-chosen-page .container .comment-box .rewiev-box .review button {
+  /* margin-top: 20px; */
+  width: 200px;
+  height: 50px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+
+  font-family: "Nunito ExtraBold";
+  font-size: 14px;
+  font-weight: 800;
+  line-height: 19px;
+  letter-spacing: 0px;
+  text-align: center;
+  color: rgb(255, 255, 255);
+  border: none;
+  border-radius: 7px;
+  background: rgb(255, 216, 129);
 }
