--- a/src/css/home.css
+++ b/src/css/home.css
@@ -301,6 +301,26 @@
   border-radius: 12px;
 }
 
+.best-seller .card-box .card-img .comment-view {
+  position: absolute;
+  bottom: 20px;
+  width: 100%;
+  height: 50px;
+
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-around;
+  opacity: 0.5;
+  background-color: rgb(78, 105, 125);
+}
+
+.best-seller .card-box .card-img .comment-view .cv {
+  display: flex;
+  flex-direction: row;
+  gap: 10px;
+}
+
 .best-seller .card-img .card-badge {
   margin-top: 15px;
   margin-left: 15px;
@@ -701,6 +721,26 @@
   box-sizing: border-box;
   border: 1px solid rgb(240, 240, 240);
   border-radius: 12px;
+}
+
+.journal .journal-box .card-img .comment-view {
+  position: absolute;
+  bottom: 20px;
+  width: 100%;
+  height: 50px;
+
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-around;
+  opacity: 0.9;
+  background-color: rgb(78, 105, 125);
+}
+
+.journal .journal-box .card-img .comment-view .cv {
+  display: flex;
+  flex-direction: row;
+  gap: 10px;
 }
 
 .journal .journal-box .card-text {
