--- a/src/css/journal.css
+++ b/src/css/journal.css
@@ -80,6 +80,32 @@
   border-radius: 12px;
 }
 
+.journal-page .container .journal-boxes .journal-box .card-img .comment-view {
+  position: absolute;
+  bottom: 20px;
+  width: 100%;
+  height: 50px;
+
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-around;
+  opacity: 0.9;
+  background-color: rgb(78, 105, 125);
+}
+
+.journal-page
+  .container
+  .journal-boxes
+  .journal-box
+  .card-img
+  .comment-view
+  .cv {
+  display: flex;
+  flex-direction: row;
+  gap: 10px;
+}
+
 .journal-page .container .journal-boxes .journal-box .card-text {
   margin-top: 26px;
   width: 100%;
