--- a/src/css/shop.css
+++ b/src/css/shop.css
@@ -375,6 +375,26 @@
   border-radius: 12px;
 }
 
+.product-page .card-box .card-img .comment-view {
+  position: absolute;
+  bottom: 20px;
+  width: 100%;
+  height: 50px;
+
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-around;
+  opacity: 0.5;
+  background-color: rgb(78, 105, 125);
+}
+
+.product-page .card-box .card-img .comment-view .cv {
+  display: flex;
+  flex-direction: row;
+  gap: 10px;
+}
+
 .product-page .card-img .card-badge {
   margin-top: 15px;
   margin-left: 15px;
